shorter, more readable methods for list and map creation